pod.yaml
apiVersion: v1
kind: Pod
metadata:
    # pod名称
    name: http-server
    # pod标签
    labels:
        # 定义app=http-server的标签
        app: http-server
spec:
    containers:
        - name: app # 容器名称，容器可多ge
          image: images.my-company.example/app:v4 # 容器对应的镜像地址
          ports:
              - containerPort: 80 # 容器对外提供服务的端口
                name: http-svc-port # 端口名称
          # pod资源限制
          resources:
              requests: # pod创建时的最低资源需求
                  memory: "64Mi" # 内存 1M = 1000KB, 1Mi = 1024KB(标准的1兆), 后缀区分大小写，不能写为m/mi
                  cpu: "250m" # cpu单位仅为m，1m表示0.001核，即千分之一个核，如250m表示0.25核
              limits: # pod运行时的最大资源限制
                  memory: "128Mi"
                  cpu: "500m"
