ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    # ingress的名称
    name: ingress-wildcard-host
    annotations:
        kubernetes.io/ingress.class: "nginx" # 指定ingress controller的类型
        # 跨域配置示例
        nginx.ingress.kubernetes.io/enable-cors: "true"
        nginx.ingress.kubernetes.io/cors-allow-origin: "*"
        nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, OPTIONS"
        nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range"
        nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
    rules:
        - host: "foo.bar.com"
          http:
              paths:
                  - pathType: Prefix # 匹配路径类型，Prefix表示前缀匹配
                    path: "/bar"
                    backend:
                        service:
                            name: http-service
                            port:
                                number: 80
